# hybridCT

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/ground_truth/: TODO
data/predicted_data/: TODO
data/training_data/: TODO
emulator/: DataLoader.py  Model.py  evaluate_and_merge.py  evaluation_utils.py  fit_model.py  generate_training_dataset.py  utils.py  viz.py
emulator/artifacts/: TODO
emulator/config/: preprocessed_viewsAa_res280m_val10.5h.yaml  preprocessed_viewsAa_res280m_val10.5h_eval.yaml  preprocessed_viewsAa_res40m_val10.5h.yaml  preprocessed_viewsAa_res40m_val10.5h_eval.yaml  preprocessed_viewsAa_res40m_val30.0h_eval.yaml  preprocessed_viewsAf_res280m_val10.5h.yaml  preprocessed_viewsAf_res280m_val10.5h_eval.yaml  preprocessed_viewsAf_res40m_val10.5h.yaml  preprocessed_viewsAf_res40m_val10.5h_eval.yaml  preprocessed_viewsAf_res40m_val30.0h_eval.yaml  preprocessed_viewsAn_res280m_val10.5h.yaml  preprocessed_viewsAn_res280m_val10.5h_eval_ablation_SZA20.yaml  preprocessed_viewsAn_res280m_val10.5h_eval_ablation_SZA30.yaml  preprocessed_viewsAn_res280m_val10.5h_eval_ablation_SZA50.yaml  preprocessed_viewsAn_res280m_val10.5h_eval_ablation_WIND05.yaml  preprocessed_viewsAn_res280m_val10.5h_eval_ablation_WIND10.yaml  preprocessed_viewsAn_res280m_val10.5h_eval_ablation_WIND20.yaml  preprocessed_viewsAn_res40m_val10.5h.yaml  preprocessed_viewsAn_res40m_val10.5h_eval.yaml  (+31 more)
emulator/mimo/pyct/: DataLoader.py  (+10 more)
reconstruction/: analyze_les_scene.py  analyze_mystic_scene.py  custom_sart.py  prep_utils.py  projection_utils.py  vipct_utils.py  viz_rec.py
(+21 files in other folders)
